<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0078BF"
    tools:context=".general.DetailsActivity">


  <LinearLayout
      android:id="@+id/linearLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        tools:srcCompat="@tools:sample/avatars" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1" />
  </LinearLayout>

  <LinearLayout
      android:id="@+id/linearLayout2"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/linearLayout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal">

      <Space
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1" />

      <TextView
          android:id="@+id/tvTitleDeta"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_margin="16dp"

          android:gravity="center"
          android:hint="@string/txtTitle"
          android:textSize="24sp" />
      //android:fontFamily="@font/krona_one"

      <Space
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal">

      <Space
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1" />

      <TextView
          android:id="@+id/Txtdescription"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_margin="16dp"

          android:gravity="center"
          android:hint="@string/txtDescriptions"
          android:textSize="14sp"
          tools:ignore="SmallSp" />
      //android:fontFamily="@font/arapey"


      <Space
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="16dp"
        android:layout_weight="1"
        android:orientation="horizontal">

      <Space
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1" />

      <TextView
          android:id="@+id/lblre"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:hint="@string/ReleaseDate"
          android:textSize="12sp" />
      //*android:fontFamily="@font/krona_one"

      <Space
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1" />

      <TextView
          android:id="@+id/LblEnd"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:hint="@string/EndDate" />

      <Space
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1" />

      <TextView
          android:id="@+id/lblCounrty"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:hint="@string/Country" />

      <Space
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal">

      <Space
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1" />

      <TextView
          android:id="@+id/txtDate"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:hint="@string/ReleaseDate"
          android:textSize="12sp" />
      //*android:fontFamily="@font/krona_one"

      <Space
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1" />

      <TextView
          android:id="@+id/TxtEnd"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:hint="@string/EndDate" />

      <Space
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1" />

      <TextView
          android:id="@+id/txtCount"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:hint="@string/Country" />

      <Space
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="16dp"
        android:layout_weight="1"
        android:orientation="horizontal">

      <Space
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1" />

      <TextView
          android:id="@+id/lblLink"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_margin="4dp"
          android:hint="@string/YouSource" />

      <TextView
          android:id="@+id/LblStatus"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_margin="4dp"
          android:hint="@string/Status" />

      <Space
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="16dp"
        android:layout_weight="1"
        android:orientation="horizontal">

      <Space
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1" />

      <TextView
          android:id="@+id/txtLink"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_margin="4dp"
          android:gravity="center"
          android:hint="@string/YouSource" />

      <TextView
          android:id="@+id/TxtStatus"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_margin="4dp"
          android:gravity="center"
          android:hint="@string/Status" />

      <Space
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1" />

    </LinearLayout>

  </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>